--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "prisma": "^5.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.2.0"
   }
 }
